# yooink

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: gh-pages.yml
about/: index.html
api/api/: index.html
api/data_fetcher/: index.html
api/data_manager/: index.html
api/request_manager/: index.html
dev/: update_deps.py  yaml_processor.py  yaml_to_csv.py
docs/: index.md
docs/quick_start/: data_overview.md
notebooks/: 01-getting_started.ipynb  02-get_data.ipynb  03-simple-get-data.ipynb  demo_01.ipynb  get_data.ipynb  getting_started.ipynb
quick_start/: index.html
quick_start/api_setup/: index.html
quick_start/data_overview/: index.html
quick_start/simple_data_query/: index.html
search/: search_index.json
src/yooink/: __init__.py
src/yooink/api/: client.py
src/yooink/data/: data_combinations.csv  data_manager.py  ooi_data.parquet  ooi_data_summary.py
src/yooink/request/: base_request.py  data_fetcher.py  request_manager.py
src/yooink/sensor/: data_manager.py  info.py
