[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yooink"
version = "0.1.3"
authors = [
  { name="Michelle Weirathmueller", email="michelle@waveformanalytics.com" },
]
description = "A package for accessing OOI data via the m2m protocol"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
keywords = ["OOI", "ocean observatory data"]

[project.urls]
Repository = "https://github.com/Waveform-Analytics/yooink"
Documentation = "https://waveform-analytics.github.io/yooink/"
Issues = "https://github.com/Waveform-Analytics/yooink/issues"

[tool.hatch.build]
include = ["src/yooink/data/data_combinations.csv"]

# Exclude the dev folder, but not necessary .yml files in src
exclude = ["dev/"]
